<?xml version="1.0"?>
<package format="2">
  <name>semantic_voxblox</name>
  <version>1.0.0</version>
  <description>Semantic Voxblox</description>

  <author email="buiquangminh1111@gmail.com">Quang Minh Bui</author>
  <maintainer email="buiquangminh1111@gmail.com">Quang Minh Bui</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>image_geometry</depend>

  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_rviz_plugin</depend>

</package>
